--- a/llm_stack_cdk/package.json
+++ b/llm_stack_cdk/package.json
@@ -20,8 +20,9 @@
     "typescript": "~5.3.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.126.0",
+    "aws-cdk-lib": "^2.141.0",
     "constructs": "^10.0.0",
+    "path": "^0.12.7",
     "source-map-support": "^0.5.21"
   }
 }
