--- a/llm_stack_cdk/package.json
+++ b/llm_stack_cdk/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.141.0",
+    "cdk-nag": "^2.28.114",
     "constructs": "^10.3.0",
+    "graphql": "^16.8.1",
     "path": "^0.12.7",
     "source-map-support": "^0.5.21"
   }
